@@ -1,5 +1,6 @@
 = ActiveMerchant CHANGELOG
 
+* Fix StartDate in ProtxGatewy [cody]
 * Add support for refunds and continuous authority references to DataCashGateway [joel.chippindale]
 * Fix gross in HiTrust notification. Don't use Money object in Verifi gateway [cody]
 * Initial implementation of Payflow Name-Value API [Greg Furmanek]
